syntax = "proto3";
package linkpb;

option go_package = "github.com/turbo514/shortenurl-v2/shared/gen/proto/linkpb";

service LinkService {
    rpc CreateLink(CreateLinkRequest) returns (CreateLinkResponse);
    rpc ResolveLink(ResolveLinkRequest) returns (ResolveLinkResponse);
}

message CreateLinkRequest {
    string tenant_id = 1;
    string api_key = 2;
    string original_url = 3;
}

message CreateLinkResponse {
    string original_url = 1;
    string short_code = 2;
}

message ResolveLinkRequest {
    string short_code = 1;
}

message ResolveLinkResponse {
    string original_url = 1;
}